Fri Feb 27 08:51:20 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Fixed a bug where 'specific' assignments were always added to
          existing values.  It did not allow for straight assigments or
          subtractions.  Now, specific assigments (additions and
          subtractions) are processed as they are read instead of at the end
          of the project.

Fri Feb 27 11:34:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          When doing a release build with BCB5 also don't use -O2. Thanks
          to Andreas Wagner <awagner@ls-wagner.de> for reporting this. This
          fixes bug [1754].

Fri Feb 27 09:02:07 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.h:
          Fixed definition fsync to fix linker errors in the msvc6
          static builds.

Thu Feb 26 18:08:19 2004  Steve Huston  <shuston@riverace.com>

        * examples/APG/Reactor/Client.cpp: Add missing #include
          "ace/OS_NS_string.h" to get ACE_OS::strlen().

Thu Feb 26 18:02:41 2004  Steve Huston  <shuston@riverace.com>

        * m4/tls.m4: Add handling for ACE_TLS_LDFLAGS so user can specify
          linker options (e.g. -L) necessary to find SSL libs.

Thu Feb 26 12:26:28 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tests/Makefile.am (Bug_1576_Regression_Test):

          Added this test to the list of tests.  It was missing.  Thanks
          to Kevin Stacy <kevin_405@yahoo.com> for reporting the problem.

        * tests/DLL_Test.cpp (dynamic_cast_test):

          Corrected spelling in error message.

        * THANKS:

          Added Kevin Stacy to the hall of fame.

Thu Feb 26 10:54:42 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * Makefile:

          Removed the CIAO_Core target, since it was brain dead in the